# image-denoising

./: .gitignore  CMakeLists.txt  README.md
dat/: noise.sh  noise_cifar-10.cpp
src/: main.cpp  toolbox_filter.cpp  toolbox_filter.h  toolchain.cpp  toolchain.h  toolkit_filter.cpp  toolkit_filter.h
src/cifar/: cifar10_reader.hpp
